# agentguard

./: .gitignore  AgentGuard_Proposal.docx  README.md  pyproject.toml
docs/: implementation-notes.md
profiles/: junior-helper.yaml
src/agentguard/: cli.py  compiler.py  gitutils.py  policy.py  profiles.py  reporting.py  risk.py  runtime.py
src/agentguard/builtin_profiles/: __init__.py  fast-prototype.yaml  production-strict.yaml
tests/: test_agentguard.py
