[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Policy-as-code runtime protection for AI coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AgentGuard contributors" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = []

[project.scripts]
agentguard = "agentguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentguard = ["builtin_profiles/*.yaml"]
